<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/websiteIcon"
        android:layout_width="59dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/website_icon_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/websiteTextView"
        android:layout_width="239dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/website"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/websiteIcon"
        app:layout_constraintTop_toTopOf="@id/websiteIcon" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="239dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/websiteTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/websiteTextView"
        app:layout_constraintTop_toBottomOf="@id/websiteTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>

